fix for index calculation with new hashCode